[project]
name = "docspark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assemblyai>=0.45.5",
    "chromadb>=1.3.3",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.12.0",
    "ipython>=9.6.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-google-community>=3.0.0",
    "langchain-google-genai>=3.0.1",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langgraph>=1.0.2",
    "langsmith>=0.4.41",
    "peft==0.5.0",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "python-jobspy>=1.1.13",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.51.0",
]
